<resources>
    <string name="app_name">تسوق</string>
    <string name="done">done</string>
    <string name="agree">موافق</string>
    <string name="internet_connection">لا يوجد اتصال بالانترنت</string>
    <string name="mobile">رقم الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="enter">دخول</string>
    <string name="forget_password_q">نسيت كلمة المرور ؟</string>
    <string name="press_here">أضغط هنا </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_name">الأسم الأول*</string>
    <string name="last_name">الأسم الأخير*</string>
    <string name="postal_code">الرقم البريدي*</string>
    <string name="mail">البريد الإلكتروني</string>
    <string name="password_astric">كلمة السر</string>
    <string name="confirm_password">إعادة كلمة السر</string>
    <string name="male">ذكر</string>
    <string name="female">أنثي</string>
    <string name="description">أوصف السلعة المراد بيعها*</string>
    <string name="create_new_account">إنشاء حساب جديد</string>
    <string name="agree_policy">من خلال إنشاء حساب جديد فإنك توافق علي شروط الإستخدام وإشعار الخصوصوية في تسوق</string>
    <string name="did_you_have_account">هل لديك حساب حالي؟</string>
    <string name="login">تسجيل الدخول</string>
    <string name="title_activity_delegate">DelegateActivity</string>
    <string name="special_request">طلب خاص</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="title_activity_delegate_details">DelegateDetailsActivity</string>
    <string name="edit_details">تعديل بيانات</string>
    <string name="required">هذا الحقل مطلوب</string>
    <string name="correct_mail">أدخل بريد اليكتروني صحيح</string>
    <string name="correct_password">كامة المرور غير متطابقة</string>
    <string name="register">التسجيل</string>
    <string name="login_as_clint">الدخول كعميل</string>
    <string name="login_as_deligate">الدخول كمندوب</string>
    <string name="full_name">الأسم بالكامل</string>
    <string name="national_id">رقم بطاقة الأحوال (رقم الهوية أو الإقامة)</string>
    <string name="link">رابط معروف (إختياري)</string>
    <string name="edit_profile">تعديل البيانات</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="full_name_validation">الاسم يجب ان يكون 7 احرف علي الاقل</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="edit">تعديل</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="the_login">الدخول</string>
    <string name="pay">أدفع</string>
    <string name="my_reseipts">فواتيرى</string>
    <string name="edit_data">تعديل البيانات</string>
    <string name="edit_image">تعديل الصورة</string>
    <string name="show_name">الأسم الذي سيظهر للمستخدمين</string>
    <string name="choose_country">أختر المدينة</string>
    <string name="accept_policy">أوافق علي إتفاقية الإستخدام</string>
    <string name="confirm_transaction">تأكيد التحويل</string>
    <string name="send">إرسال</string>
    <string name="enter_amount">أدخل المبلغ</string>
    <string name="attach_image">أرفق صورة</string>
    <string name="transaction_done">هل تم التحويل؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="buyer_rating">تقييم البائع</string>
    <string name="rating_details">تفاصيل التقييم</string>
    <string name="create_reset">إصدار فاتورة</string>
    <string name="not_paid">غير مدفوعة</string>
    <string name="product_description">وصف المنتج</string>
    <string name="create_offer">قدم عرض</string>
    <string name="permissions_needed">permissions_needed</string>
    <string name="cancel">إلغاء</string>
    <string name="send_to">ارسال الي</string>
    <string name="category">القسم</string>
    <string name="city">المدينة</string>
    <string name="search_word">كلمة البحث</string>
    <string name="report_product">تبليغ عن منتج مسئ</string>
    <string name="confirm_new_password">تأكيد كلمة المرور الجديدة</string>
    <string name="old_password">كلمة المرور القديمة</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="required_password">يجب الا يقل عن 8 أحرف</string>
    <string name="required_confirm_password">كلمة المرور غير متطابقة</string>
    <string name="chat">الشات</string>
    <string name="personal_profile">الملف الشخصي</string>
    <string name="add_product">إضافة منتج</string>
    <string name="product_details">تفاصيل المنتج</string>
    <string name="messages">الرسائل</string>
    <string name="notifications">الإشعارات</string>
    <string name="rating">تقييم</string>
    <string name="reset_details">تفاصيل الفاتورة</string>
    <string name="transaction_data">بيانات التحويل</string>
    <string name="confirmation_code">تأكيد رقم الجوال</string>
    <string name="enter_confirmation_code">أدخل كود التفعيل المرسل الي جوالك</string>
    <string name="send_code">إرسال الكود</string>
    <string name="map">الخريطة</string>
    <string name="write_msg_here">اكتب الرسالة هنا ...</string>
    <string name="price">السعر</string>
    <string name="message">الرسالة</string>
    <string name="invoices">الفواتير</string>
    <string name="update_product">تعديل منتج</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="sure_report_product">هل تريد التبليغ عن منتج مسئ ؟</string>
    <string name="login_first">يجب تسجيل الدخول أولا</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="confirm_transaction_delivery">هل تم التحويل ؟</string>
</resources>
