<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/header_bg_4"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".activities.RegisterActivity"
            tools:showIn="@layout/activity_register">


            <EditText
                android:id="@+id/edtRegisterFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_register"
                android:hint="@string/full_name"
                android:inputType="text"
                android:drawablePadding="@dimen/_7sdp"
                android:drawableRight="@drawable/icon_yourname"
                tools:ignore="RtlHardcoded"
                android:lines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/edtRegisterNameShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit_register"
                android:hint="@string/show_name"
                android:gravity="right"
                android:inputType="text"
                android:layout_marginTop="@dimen/_12sdp"
                android:drawablePadding="@dimen/_7sdp"
                android:drawableRight="@drawable/icon_yourname"
                tools:ignore="RtlHardcoded"
                android:lines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack" />


            <EditText
                android:id="@+id/edtRegisterMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/background_edit_register"
                android:gravity="right"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:drawablePadding="@dimen/_7sdp"
                android:drawableRight="@drawable/icon_yourmobile"
                tools:ignore="RtlHardcoded"
                android:lines="1"
                android:maxLength="10"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack" />


            <EditText
                android:id="@+id/edtRegisterMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/background_edit_register"
                android:hint="@string/mail"
                android:drawablePadding="@dimen/_7sdp"
                android:drawableRight="@drawable/icon_youremail"
                tools:ignore="RtlHardcoded"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack" />


            <EditText
                android:id="@+id/edtRegisterLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/background_edit_register"
                android:hint="@string/link"
                android:inputType="text"
                android:lines="1"
                android:drawablePadding="@dimen/_7sdp"
                android:drawableRight="@drawable/icon_yourlink"
                tools:ignore="RtlHardcoded"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:visibility="visible" />


            <EditText
                android:id="@+id/edtRegisterCity"
                android:layout_width="match_parent"
                android:drawablePadding="@dimen/_7sdp"
                android:drawableRight="@drawable/icon_country"
                tools:ignore="RtlHardcoded"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/background_edit_register"
                android:drawableLeft="@drawable/arrow"
                android:hint="@string/choose_country"
                android:inputType="none"
                android:lines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack"
                android:visibility="visible" />


            <EditText
                android:id="@+id/edtRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/background_edit_register"
                android:gravity="right"
                android:hint="@string/password_astric"
                android:inputType="textPassword"
                android:drawablePadding="@dimen/_7sdp"
                android:drawableRight="@drawable/icon_yourpassword"
                tools:ignore="RtlHardcoded"
                android:lines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack" />


            <EditText
                android:id="@+id/edtRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/background_edit_register"
                android:gravity="right"
                android:hint="@string/confirm_password"
                android:drawablePadding="@dimen/_7sdp"
                android:drawableRight="@drawable/icon_yourpassword"
                tools:ignore="RtlHardcoded"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/colorBlack" />


            <CheckBox
                android:id="@+id/chRegisterPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_7sdp"
                android:padding="@dimen/_7sdp"
                android:text="@string/accept_policy" />

            <Button
                android:id="@+id/btnRegisterRegister"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:alpha="0.5"
                android:background="@drawable/background_text_edit_profile"
                android:enabled="false"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>