<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/header_bg_2"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/_22px"
            android:textColor="@color/colorWhite"
            android:text="@string/personal_profile"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <EditText
            android:id="@+id/edtChangePasswordOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_edit_register"
            android:drawablePadding="@dimen/_7sdp"
            android:drawableRight="@drawable/icon_yourpassword"
            android:gravity="right"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorBlack"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edtChangePasswordNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_edit_register"
            android:drawablePadding="@dimen/_7sdp"
            android:drawableRight="@drawable/icon_yourpassword"
            android:gravity="right"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorBlack"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edtChangePasswordConfirmNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_edit_register"
            android:drawablePadding="@dimen/_7sdp"
            android:drawableRight="@drawable/icon_yourpassword"
            android:gravity="right"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/colorBlack"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:alpha="1"
            android:background="@drawable/background_text_edit_profile"
            android:text="@string/edit_data"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>
</LinearLayout>