<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/header_bg_3"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/confirmation_code"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_22px" />
    </FrameLayout>

    <EditText
        android:id="@+id/edtConfirmationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_edit_register"
        android:drawablePadding="@dimen/_7sdp"
        android:drawableRight="@drawable/icon_yourmobile"
        android:gravity="right"
        android:hint="@string/enter_confirmation_code"
        android:inputType="numberDecimal"
        android:lines="1"
        android:maxLength="10"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_17px"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnConfirmationCodeSend"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:alpha="1"
        android:background="@drawable/background_text_edit_profile"
        android:text="@string/send_code"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_15sdp" />
</LinearLayout>