<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:minWidth="@dimen/_300sdp"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:id="@+id/tvDialogExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="X"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_19px"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/special_request"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_22px" />


        <EditText
            android:id="@+id/edtDialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_edit_text_dialog"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="right"
            android:hint="@string/message"
            android:inputType="text"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            tools:ignore="RtlHardcoded,UnusedAttribute" />

        <Button
            android:id="@+id/btnDialogAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_button"
            android:text="@string/send"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>

</RelativeLayout>